--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,8 +1,24 @@
 .navbar {
-  background-color: #facf39;
+  background-color: #3f72af;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  margin: 0px;
+  text-align: right;
+  padding-right: 1rem;
+  height: 120px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: end;
+  justify-content: end;
 }
 
 .logo {
   margin: 10px;
+  text-align: left;
+  margin: 0px;
+  display: flex;
+align-self: center;
+  margin-right: auto;
+  margin-left: 2rem;
 }
+
