--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,9 @@ a {
 
 button,
 select {
-  padding: 5px 10px;
-  min-width: 50px;
-  margin: 5px;
+  padding: 7px 10px;
+  min-width: 120px;
+  margin: 10px;
   font-size: 18px;
   background-color: #facf39;
   color: #5f8cc3;
@@ -25,6 +25,7 @@ select {
 button:hover {
   background-color: #4caf4f00; /* Green */
   color: white;
+  border: #facf39 solid 1px;
 }
 
 label {
