--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ select {
   transition-duration: 0.4s;
   border-radius: 8px;
   cursor: pointer;
+  border: #facf39 solid 1px;
 }
 
 button:hover {
