--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,7 +1,7 @@
 .cover {
   margin: 0;
-  background-image: url(/public/images/cover.png);
-  background-attachment: fixed;
+  background-image: url(/public/images/cover.jpeg);
+  background-image: fixed;
   background-color: #cccccc;
   height: 600px;
   background-position: center top;
