fixed the display of list

--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,17 @@
   text-align: center;
 }
 
-.loginPage {
+.loginPage,
+.signupPage,
+.ProfilePage,
+.AddVehicle,
+.VehiclePage {
   background-color: #3f72af;
   width: 400px;
   border-radius: 8px;
   margin: 50px auto;
   padding: 10px 20px;
-}
-
-.signupPage {
-  background-color: #3f72af;
-  width: 400px;
-  border-radius: 8px;
-  margin: 50px auto;
-  padding: 10px 20px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .addRide {
@@ -26,8 +23,8 @@
   padding: 10px 20px;
 }
 
-#intervalOfRide option{
-  width:1500px;   
+#intervalOfRide option {
+  width: 90%;
 }
 
 label {
