--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -27,3 +27,29 @@ align-self: center;
   font-size: 18px;
 }
 
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #facf39;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: rgb(52, 51, 51);
+  padding: 12px 30px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
